// EDIT IT, change to your package, service and message
syntax = "proto3";
package glory.boot;

import "google/protobuf/empty.proto";
option go_package = "glory/boot";

service DebugService {
  rpc Watch (WatchRequest) returns (stream WatchResponse) {}
  rpc ListServices (google.protobuf.Empty) returns (ListServiceResponse) {}
  rpc WatchEdit (stream WatchEditRequest) returns (stream WatchResponse) {}
}

message ListServiceResponse{
  repeated ServiceMetadata serviceMetadata = 1;
}

message ServiceMetadata{
  string interfaceName = 1;
  string implementationName = 2;
  repeated string methods = 3;
}

message WatchEditRequest{
  string interfaceName = 1;
  string implementationName = 2;
  string method = 3;
  bool isParam = 4;
  bool isEdit = 5;
  repeated Matcher matchers = 7;
  repeated EditRequest editRequests = 8;
}

message WatchRequest{
  string interfaceName = 1;
  string implementationName = 2;
  string method = 3;
  bool input = 4;
  bool output = 5;
  repeated Matcher matchers = 6;
}

message EditRequest{
  int64 index = 1;
  string path = 2;
  string value = 3;
}

message Matcher{
  int64 index = 1;
  string matchPath = 2;
  string matchValue = 3;
}

message WatchResponse{
  string interfaceName = 1;
  string implementationName = 2;
  string methodName = 3;
  bool isParam = 4;
  repeated string params = 5;
}